* Applied patch by Donn Cave: channel_set() was missing, causing bug #2284.   Thanks! * Minor cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@26163 a95241bf-73f2-0310-859d-f6bbb57e9c96